# response_agente

./: .env  docker-compose.yml  dockerfile  pyproject.toml  streamlit_app.py
response_agent/: agente.py  gerente.py  main.py  vectors_store.py  vetorizar.py
